--- a/Week5.ipynb
+++ b/Week5.ipynb
@@ -906,6 +906,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**HASIL ANALISA**\n",
+        "\n",
+        "- OR : Operator OR digunakan untuk menggabungkan 2 image/ foto menjadi satu\n",
+        "\n",
+        "- NOT : Operator NOT digunakan untuk membalik nilai. Maksutnya dengan menggunakan menggunakan operator NOT tersebut gambar mawar yang sudah tertutup dengan circle bewarna putih akan berubah warna\n",
+        "\n",
+        "- NAND : Operator NAND digunakan untuk menggabungkan 2 atau lebih pola. Operator ini mengahsilkan nilai true apabila salah satu nilai nilai atau keduanya bernilai false\n",
+        "\n",
+        "- XOR : Operator XOR digunakan untuk menggabungkan 2 pola yang berbeda dan menghasilkan nilai pixel yang berbeda juga"
+      ],
+      "metadata": {
+        "id": "5T1VrdjRftLM"
+      }
     }
   ]
 }
