--- a/Week7.ipynb
+++ b/Week7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMt3egLz1iK5tlj5Jea5wK3",
+      "authorship_tag": "ABX9TyPS49yhn6aEOUXQVkYJaT1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,28 @@
         "id": "kvdYWGe7M4pV"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from google.colab import drive\n",
+        "\n",
+        "# accessing My Google Drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import cv2 as cv\n",
+        "import math\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "from PIL import Image as im"
+      ],
+      "metadata": {
+        "id": "lMT5BPrIarPL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
