--- a/UTS.ipynb
+++ b/UTS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMELy/TzcTwQFfE90vNZpiJ",
+      "authorship_tag": "ABX9TyPCLtAMaNsiKWx8CqOw3j1F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ovSk9H1mAAvc",
-        "outputId": "9fe3ae08-423c-4983-a404-3788067bd22e"
+        "outputId": "3440f37e-b5f2-4749-a271-06040760a88f"
       },
       "outputs": [
         {
@@ -80,7 +80,7 @@
           "height": 452
         },
         "id": "LHmpn6CzDGUq",
-        "outputId": "8bfe81be-46fc-4c6f-96a6-3ba3435952c5"
+        "outputId": "40e77fdd-ddc9-4135-edbb-93611dcceee4"
       },
       "execution_count": 3,
       "outputs": [
@@ -88,7 +88,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fce721e41f0>"
+              "<matplotlib.image.AxesImage at 0x7f8174e84340>"
             ]
           },
           "metadata": {},
@@ -109,7 +109,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#mean\n",
+        "#mean(rata-rata)\n",
         "def mf(img, FilterSize):\n",
         "    #pertama membuat array\n",
         "    output = np.zeros(img.shape, np.uint8)\n",
@@ -150,7 +150,7 @@
         "id": "NRNDSM7WEXIV",
         "outputId": "fe5c7544-c62f-43ef-9c42-9835e407cb27"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -167,16 +167,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#median\n",
+        "#median(nilai tengah)\n",
         "from cv2 import * \n",
-        "\n",
         "import cv2\n",
         "\n",
         "# source = cv2.imread('/content/drive/MyDrive/PCVK/Images/female.tiff', CV_LOAD_IMAGE_GRAYSCALE)\n",
         "final = img_gray[:]\n",
-        "for y in range(len(img_gray)):\n",
-        "  for x in range(y):\n",
-        "      final[y,x]=img_gray[y,x]\n",
+        "for i in range(len(img_gray)):\n",
+        "  for d in range(i):\n",
+        "      final[i,d]=img_gray[i,d]\n",
         "\n",
         "# unutk membuat kernel filter kosong\n",
         "members=[img_gray[0,0]]*10\n",
@@ -206,7 +205,7 @@
         "id": "mxORP8bfE9w-",
         "outputId": "cc6a71e4-7031-4276-e80d-770952aa7248"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -223,7 +222,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#modus\n",
+        "#modus(nilai yang sering muncul)\n",
         "def ifil(img, FilterSize):\n",
         "   \n",
         "    #membuat array\n",
@@ -255,7 +254,7 @@
       "metadata": {
         "id": "diaQ3WxHFk32"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +275,7 @@
         "id": "13QrYfTIGQny",
         "outputId": "18907599-397a-4d8e-c654-281731c977d8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -317,7 +316,7 @@
       "metadata": {
         "id": "zfadLq-BIAS3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +328,7 @@
       "metadata": {
         "id": "m8-c68HOIOCe"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +344,7 @@
       "metadata": {
         "id": "uUNH0mjeIVGR"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +362,7 @@
         "id": "2I9kyWvcIqTs",
         "outputId": "66d6478c-ad68-4217-bb2f-f11bccb05c62"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -390,7 +389,7 @@
       "metadata": {
         "id": "XJqlvGmWI19l"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +407,7 @@
         "id": "zpbEudnTJtV_",
         "outputId": "2eae2f5b-1ede-4680-a7e7-d541456b96bf"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +446,7 @@
         "id": "vwL420p-KKdp",
         "outputId": "f30d86a9-09af-406c-f770-4ea5eb73e62f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
