--- a/UTS.ipynb
+++ b/UTS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCLtAMaNsiKWx8CqOw3j1F",
+      "authorship_tag": "ABX9TyPbTrWLDuAj8O+qfxLRFGsc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,31 +230,31 @@
         "\n",
         "    #membuat padding atau ruang kosong \n",
         "    padding_width = FilterSize // 2\n",
-        "    pd_img = np.pad(img, padding_width, mode='constant')\n",
+        "    pd_img = np.pad(img, padding_width, mode='constant') #memakai fungsi nilai\n",
         "\n",
-        "    for a in range(padding_width, pd_img.shape[0] - padding_width):\n",
-        "        for b in range(padding_width, pd_img.shape[1] - padding_width):\n",
+        "    for d in range(padding_width, pd_img.shape[0] - padding_width):\n",
+        "        for i in range(padding_width, pd_img.shape[1] - padding_width):\n",
         "\n",
         "            #membuat array \n",
         "            Values = np.zeros(FilterSize * FilterSize, dtype=np.uint8)\n",
         "            r = 0\n",
         "\n",
         "            #iterasi pada setiap piksel\n",
-        "            for x in range(-padding_width, padding_width + 1):\n",
-        "                for y in range(-padding_width, padding_width + 1):\n",
-        "                    Values[r] = pd_img[a + x, b + y]\n",
+        "            for a in range(-padding_width, padding_width + 1):\n",
+        "                for j in range(-padding_width, padding_width + 1):\n",
+        "                    Values[r] = pd_img[d + a, i + j]\n",
         "                    r += 1\n",
         "            #menghitung nilai pd modus\n",
         "            mode_value = np.bincount(Values).argmax()\n",
         "            #hasil dr nilai modus\n",
-        "            output[a - padding_width, b - padding_width] = mode_value\n",
+        "            output[d - padding_width, i - padding_width] = mode_value\n",
         "\n",
-        "    return output"
+        "    return output #pengembalian nilai"
       ],
       "metadata": {
         "id": "diaQ3WxHFk32"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
